I have fixed the spacing under any size

--- a/index.css
+++ b/index.css
@@ -353,11 +353,12 @@ select {
 
 .primary-navigation{
     --underline-gap: 2rem;
-    background-color: hsl(var(--clr-dark) /.95);
+    background-color: hsl(var(--clr-white) /0.05);
     margin:0;
     padding:0;
     list-style: none;
     border:1px solid cyan;
+    backdrop-filter: blur(1.5rem);
 }
 
 .primary-navigation a{
@@ -366,7 +367,7 @@ select {
 
 .primary-navigation a > span{
     font-weight: 700;
-    margin-right:.5em;
+    margin-right: .5em;
 }
 
 .mobile-nav-toggle {
@@ -375,7 +376,7 @@ select {
 
 @supports(backdrop-filter: blur(1.5rem)){
     .primary-navigation{
-        background-color: hsl(var(--clr-white) /.002);
+        background-color: hsl(var(--clr-white) /.05);
         backdrop-filter: blur(1.5rem);
         -webkit-backdrop-filter: blur(1.5rem);
     }
@@ -384,27 +385,20 @@ select {
 
 @media (max-width: 35rem){
     .primary-navigation {
-        --underline-gap:.5rem;
+        --underline-gap: .5rem;
         flex-direction: column;
         position: fixed;
         inset: 0 0 0 33%;
         z-index: 1000;
-        padding:min(20rem, 15vh) 2rem;
+        padding: min(20rem, 15vh) 2rem;
         transform: translateX(100%);
         transition: transform 500ms ease-in-out;
     }
 
 .primary-navigation[data-visible='true'] {
-        transform: translateX(0%);
+        transform: translateX(0);
      }
-.mobile-nav-toggle[aria-expanded='true'] {
-    background-image: url(./starter-code/assets/shared/icon-close.svg);
-    }
 
-.mobile-nav-toggle:focus-visible{
-    outline:5px solid white;
-    outline-offset: 5px;
-}
     .mobile-nav-toggle {
         display:block;
         position:absolute;
@@ -418,6 +412,16 @@ select {
         background-position: center;
         width: 1.5rem;
         aspect-ratio: 1;
+        border:0;
+    }
+
+    .mobile-nav-toggle[aria-expanded='true'] {
+        background-image: url(./starter-code/assets/shared/icon-close.svg);
+        }
+    
+    .mobile-nav-toggle:focus-visible{
+        outline:5px solid white;
+        outline-offset: 5px;
     }
 
     .primary-navigation.underline-indicator > * {
@@ -430,7 +434,7 @@ select {
 }
 
 .underline-indicator > * {
-    padding: var(--underline-gap, 1rem);
+    padding: var(--underline-gap, 1rem) 0;
     border:0;
     border-bottom: .2rem solid hsl(var(--clr-white) /0);
     cursor: pointer;
@@ -451,7 +455,7 @@ select {
 }
 
 .tab-list{
- --gap:3rem;
+ --gap:2rem;
 }
 
 .dot-indicators{
